NIFI-11842 - remove getTargetUri() and code cleanup